fix: corrigindo arquivo docker-compose.yml