@@ -1,10 +1,9 @@
-FROM openjdk:8-jdk-alpine
+FROM amazoncorretto:17-alpine
 
 RUN addgroup -S spring && adduser -S spring -G spring
-
 USER spring:spring
 
-ARG JAR_FILE=target/*jar
+ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 
-ENTRYPOINT ["java","-Xms128M","-Xmx128M","-XX:PermSize=64m","-XX:MaxPermSize=128m","-Dspring.profiles.active=prod","-jar","/app.jar"]
+ENTRYPOINT ["java","-Xms128M","-Xmx128M","-Dspring.profiles.active=prod","-jar","/app.jar"]
